Overlay z-index fixed

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -108,6 +108,7 @@ overlay {
 	bottom: 0%;
 	justify-items: center;
 	align-items: center;
+	z-index: 32;
 }
 
 overlay.roger {
